# scenario-generator-chatbot

./: .gitignore  README.md  app.py  batch_scenario_generator.py  env.example  er.name  main.py  newapp.py  pyproject.toml  recorder_scenic.py  requirements.txt  search_app.py  search_workflow.md
Scenario/: NHTSA_PreCrash.txt
core/: config.py  embedding.py  graph.py  llm.py  llm2.py  llm3.py  milvus_client.py  scenario_milvus_client.py  search_workflow.py  workflow.py  workflow_logger.py
core/agents/: AdversarialObjectsGenerator.py  BehaviorGenerator.py  CodeAssembler.py  CodeGenerator.py  CodeRefiner.py  CodeValidator.py  CodeVerifier.py  DetailEnricher.py  EgoVehicleSetup.py  ErrorCorrector.py  FeedbackHandler.py  HeaderGenerator.py  Interpretor.py  LogicalScenarioInterpreter.py  RAGAgent.py  RestrictionRequirementsGenerator.py  RoadGenerator.py  SettingsUpdateAgent.py  __init__.py  base.py  code2logical_agent.py  code_adapter_agent.py  component_assembler_agent.py  component_generator_agent.py  component_scoring_agent.py  (+1 more)
maps/: Town01.snet  Town02.snet  Town07.snet
notes/: logout_cleanup.md  progress.md  scenario_generation_survey.md
utilities/: AgentLogger.py  QueueHandler.py  add_rolename_to_ego.py  carla.py  carla_utils.py  clean_markdown.py  insert_scenarios_to_milvus.py  loader.py  ocr_converter.py  parser.py  process_scenic_to_json.py  remove_comments.py  run_validation_check.py  scrape_scenic_docs.py  simple_restructure_scenic.py  testCARLA.py
workflow/: documentation_insert.py  markdown.py  pdf_ingest.py  pdf_ingest_pypdf.py
(+456 files in other folders)
